Agregado de contenido

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 <header class="header">
     <nav class="nav">
         <a href="#" class="logotipo">
-            <img height="80" width="80" src="/imagenes/foto_cv_arg_progr.jpg" alt="Imagen del titular del cv">
-            <div id="nombre">Pablo Gimenez</div>
+            <img height="120" width="120" src="/imagenes/foto_cv_arg_progr.jpg" alt="Imagen del titular del cv">
+            <div id="nombre">Pablo Gimenez
+                <p>Ingeniero mecánico aeronáutico</p>
+            </div>
         </a>
 
         <ul class="menu">
             <li><a href="#mi_perfil">Mi perfil</a></li>
+            <li><a href="#educacion">Educación</a></li>
             <li><a href="#experiencia_laboral">Experiencia laboral</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#contacto">Contacto</a></li>
@@ -40,25 +43,21 @@
         <a name="mi_perfil"></a>
         <h2>Miperfil</h2>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid unde inventore facere accusamus earum
-            nisi, exercitationem ex nostrum qui assumenda neque nesciunt enim ullam facilis rerum deserunt dolore quidem
-            ducimus.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor ipsa harum qui, ut culpa. Laborum illo tempora, ullam corporis mollitia, expedita recusandae molestiae velit distinctio labore odio voluptates ex?
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.  
+            Ingeniero mecánico aeronáutico, con  diez años de experiencia laboral en el sector aeronáutico especializado en el diseño y modelado de piezas en materiales compuestos. Desarrollo de las últimas actualizaciones del Embraer KC-390 en planta Brasil. Mi capacidad de generar ideas y mi facilidad para trabajar en equipo son mis principales herramientas para trabajar y crecer como diseñador aeronáutico.
         </p>
     </div>
 
-    <div>
+    <div id="educacion">
         <a name="educación"></a>
         <h2>Educación</h2>
 
         <ul class="educacion">
             <li>Primaria</li>
-                <p>Escuela nacional San Martín.</p>
-            <li>Primaria</li>
-                <p>Escuela nacional San Martín.</p>
-            <li>Primaria</li>
-                <p>Escuela nacional San Martín.</p>
+                <p>Escuela nacional San Martín. Ciudad de Córdoba </p>
+            <li>Secundaria</li>
+                <p>Escuela nacional San Martín. Ciudad de Córdoba</p>
+            <li>Terciaria</li>
+                <p>UNC Universidad Nacional de Córdoba</p>
         </ul>
     </div>
 
@@ -68,11 +67,11 @@
 
         <ul class="experiencia_laboral">
 
-            <li>1994-1996 Taller mecanico. <span class="ver_mas" >Ver más..</span>  
-                <p class="experiencia" style="display: none;">sfdsfsfsf</p>
+            <li>2005-2011 -> FAdeA, Fábrica Argentina de Aviones <span class="ver_mas" >Ver más..</span>  
+                <p class="experiencia" style="display: none;">Departamento de diseño y desarrollo CAD</p>
             </li>
-            <li>1994-1996 CITES. <span class="ver_mas" >Ver más..</span>
-                <p class="experiencia" style="display: none;">QWSQSWQSWQWD</p>
+            <li>2012-2022 -> EMBRAER, sede central. São José dos Campos, São Paulo, <span class="ver_mas" >Ver más..</span>
+                <p class="experiencia" style="display: none;">Sector ingeniería en materiales compuestos, diseño CAD, pruebas de laboratorio y ensayos de materiales compuestos</p>
             </li>
         </ul>
     </div>
@@ -80,15 +79,14 @@
     <div>
         <a name="habilidades"></a>
         <h2>Habilidades</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur labore ullam quas distinctio sequi in sit
-            at quam aliquam, eaque error doloribus temporibus quidem reiciendis enim unde laudantium esse voluptates?
+        <p>Pensamiento creativo, alta capacidad para resolver problemas de una manera simple, muy buena comunicación con el eqipo de trabajo generando así un clima muy agradable para explotar al máximo el potencial profecional. Manejo fluido del Inglés y el Portugués.
         </p>
     </div>
 
     <div>
         <a name="contacto"></a>
         <h2>Contacto</h2>
-        <p>pablogimenez@beta.com</p>
+        <p id="email">pablogimenez@beta.com</p>
         <a href="#formulario"><button id="contactame">Contáctame</button></a>
         <a name="formulario"></a>
             <form id="form" action="" style="display: none;">
